# api

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/database/: mod.rs
src/routes/: authentificate.rs  create_post.rs  edit_post.rs  edit_user.rs  get_posts.rs  get_posts_by_user.rs  get_users.rs  is_token_valid.rs  login.rs  mod.rs  register.rs  structs.rs  users.rs
src/routes/auth/: login.rs  mod.rs  register.rs
src/routes/posts/: create_post.rs  delete_post.rs  edit_post.rs  get_posts.rs  get_posts_by_user.rs  mod.rs
src/routes/users/: edit_user.rs  get_users.rs  mod.rs
src/structs/: post.rs  user.rs
src/utils/: authentificate.rs  mod.rs  structs.rs
