[package]
name = "api-v2-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
