[package]
name = "api-v2-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["fs"] }
surrealdb = "1.0.0-beta.9"
rand = "0.8.5"
surrealdb-migrations = "0.9.9"
tower = "0.4.13"
