[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.18", features = ["headers"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
rand = "0.8.5"
tower = "0.4.13"
log = "0.4.19"
tower-cookies = "0.9.0"
hashes = "0.1.9"
email_address = "0.2.4"
